...
            android:text="Daftar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun? Login disini!"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp"
            app:layout_constraintVertical_bias="0.073"
            tools:layout_editor_absoluteX="0dp" />

...
